--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-flask==1.0.2
-pyftpdlib==1.5.4
-passlib==1.7.1
-hbmqtt==0.9.5
-pyyaml>=4.2b1
-paho-mqtt==1.4.0
-aiohttp==1.0.5
+aiohttp==3.6.2
 aiohttp-index==0.1
-https://github.com/ntoonio/alfons-hbmqtt-auth/archive/master.zip
+async-timeout==3.0.1
+attrs==19.3.0
+certifi==2019.9.11
+chardet==3.0.4
+docopt==0.6.2
+hbmqtt==0.9.5
+idna==2.8
+multidict==4.6.1
+paho-mqtt==1.5.0
+passlib==1.7.2
+PyYAML==5.1.2
+requests==2.22.0
+six==1.13.0
+transitions==0.7.1
+urllib3==1.25.7
+websockets==8.1
+yarl==1.3.0
