Added alfons_hbmqtt_auth as subdir instead of submodule

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,21 @@
 .DS_Store
-_*
-!__*__.py
 *.pyc
 *.db
 *.log
+
+venv/
+*.egg-info/
+dist/
+
 *.pem
 *.csr
 *.crt
 *.srl
+
 Alfons/apps/*
 Alfons/automations/*
 Alfons/config/alfons.yaml
 Alfons/data/
-Alfons.egg-info/
-dist/
-venv/
+
+_*
+!__*__.py
