Added inside_port in case alfons will be behind for example nginx

--- a/Alfons/config/default_config.yaml
+++ b/Alfons/config/default_config.yaml
@@ -1,7 +1,5 @@
 data_path: config/
 
-ip: NULL
-ext_ip: NULL
 domain: NULL
 
 location:
@@ -20,3 +18,4 @@ mqtt:
 
 web:
   port: 8080
+  inside_port: NULL
