--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ attrs==19.3.0
 certifi==2019.9.11
 chardet==3.0.4
 docopt==0.6.2
-https://github.com/ntoonio/hbmqtt/archive/alfons.zip # Until pull request #194 and #190/195 is merged (https://github.com/beerfactory/hbmqtt/pull/194). hbmqtt==0.9.5
+-e git+https://github.com/ntoonio/hbmqtt/tarball/alfons#egg=hbmqtt # Until pull request #194 and #190/195 is merged (https://github.com/beerfactory/hbmqtt/pull/194). hbmqtt==0.9.6
 idna==2.8
 multidict==4.6.1
 paho-mqtt==1.5.0
